// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GraphProjection golden snapshots > Legacy envelope snapshot 1`] = `
{
  "clusters": [],
  "edges": [
    {
      "edgeType": "inferred",
      "id": "leg-1:leg-2:inferred",
      "isHeuristic": true,
      "source": "leg-1",
      "target": "leg-2",
    },
  ],
  "hierarchy": {
    "nodes": [],
    "rootId": null,
  },
  "meta": {
    "collectionId": "col-legacy-1",
    "edgeCount": 1,
    "hasAiReadiness": false,
    "hasHierarchy": false,
    "isHeuristic": false,
    "metadataVersion": 0,
    "nodeCount": 2,
    "normalizationSource": "legacy",
    "projectedAt": "2026-05-17T00:00:00.000Z",
    "projectionStrategy": "auto-layout",
    "projectionVersion": 1,
  },
  "nodes": [
    {
      "disabled": undefined,
      "group": undefined,
      "hierarchyPath": [],
      "id": "leg-1",
      "indexWithinLayer": 0,
      "isAutoPositioned": true,
      "label": "Step 1",
      "layer": 0,
      "nodeType": "HTTP",
      "position": {
        "x": 0,
        "y": 0,
      },
      "status": undefined,
      "visualGroup": undefined,
    },
    {
      "disabled": undefined,
      "group": undefined,
      "hierarchyPath": [],
      "id": "leg-2",
      "indexWithinLayer": 1,
      "isAutoPositioned": true,
      "label": "Step 2",
      "layer": 1,
      "nodeType": "HTTP",
      "position": {
        "x": 250,
        "y": 100,
      },
      "status": undefined,
      "visualGroup": undefined,
    },
  ],
  "warnings": [
    {
      "code": "LEGACY_NODE_PROJECTION",
      "detail": "2 legacy steps shimmed",
    },
  ],
}
`;

exports[`GraphProjection golden snapshots > OpenAPI envelope snapshot 1`] = `
{
  "clusters": [
    {
      "clusterId": "hint:pets",
      "label": "pets",
      "nodeIds": [],
      "source": "hint",
    },
    {
      "clusterId": "tag:pets",
      "label": "pets",
      "nodeIds": [
        "op-1",
        "op-2",
      ],
      "source": "tag",
    },
  ],
  "edges": [
    {
      "edgeType": "inferred",
      "id": "op-1:op-2:inferred",
      "isHeuristic": true,
      "source": "op-1",
      "target": "op-2",
    },
  ],
  "hierarchy": {
    "nodes": [],
    "rootId": null,
  },
  "meta": {
    "collectionId": "col-openapi-1",
    "edgeCount": 1,
    "hasAiReadiness": false,
    "hasHierarchy": false,
    "isHeuristic": true,
    "metadataVersion": 1,
    "nodeCount": 2,
    "normalizationSource": "openapi",
    "projectedAt": "2026-05-17T00:00:00.000Z",
    "projectionStrategy": "auto-layout",
    "projectionVersion": 1,
  },
  "nodes": [
    {
      "disabled": undefined,
      "group": undefined,
      "hierarchyPath": [
        "pets",
        "listPets",
      ],
      "id": "op-1",
      "indexWithinLayer": 0,
      "isAutoPositioned": true,
      "label": "listPets",
      "layer": 0,
      "nodeType": "HTTP",
      "position": {
        "x": 0,
        "y": 0,
      },
      "status": undefined,
      "visualGroup": "pets",
    },
    {
      "disabled": undefined,
      "group": undefined,
      "hierarchyPath": [
        "pets",
        "createPets",
      ],
      "id": "op-2",
      "indexWithinLayer": 1,
      "isAutoPositioned": true,
      "label": "createPets",
      "layer": 0,
      "nodeType": "HTTP",
      "position": {
        "x": 0,
        "y": 100,
      },
      "status": undefined,
      "visualGroup": "pets",
    },
  ],
  "warnings": undefined,
}
`;

exports[`GraphProjection golden snapshots > Postman envelope snapshot 1`] = `
{
  "clusters": [
    {
      "clusterId": "folder:Pets",
      "label": "Pets",
      "nodeIds": [
        "step-1",
        "step-2",
      ],
      "source": "folder",
    },
    {
      "clusterId": "hint:CRUD",
      "label": "CRUD",
      "nodeIds": [],
      "source": "hint",
    },
  ],
  "edges": [
    {
      "edgeType": "depends_on",
      "id": "step-1:step-2:depends_on",
      "source": "step-1",
      "target": "step-2",
    },
  ],
  "hierarchy": {
    "nodes": [],
    "rootId": null,
  },
  "meta": {
    "collectionId": "col-postman-1",
    "edgeCount": 1,
    "hasAiReadiness": false,
    "hasHierarchy": false,
    "isHeuristic": true,
    "metadataVersion": 1,
    "nodeCount": 2,
    "normalizationSource": "postman",
    "projectedAt": "2026-05-17T00:00:00.000Z",
    "projectionStrategy": "hybrid",
    "projectionVersion": 1,
  },
  "nodes": [
    {
      "disabled": undefined,
      "group": undefined,
      "hierarchyPath": [
        "Pets API",
        "GET /pets",
      ],
      "id": "step-1",
      "indexWithinLayer": 0,
      "isAutoPositioned": false,
      "label": "GET /pets",
      "layer": 0,
      "nodeType": "HTTP",
      "position": {
        "locked": undefined,
        "x": 0,
        "y": 0,
      },
      "status": undefined,
      "visualGroup": "Pets",
    },
    {
      "disabled": undefined,
      "group": undefined,
      "hierarchyPath": [
        "Pets API",
        "POST /pets",
      ],
      "id": "step-2",
      "indexWithinLayer": 1,
      "isAutoPositioned": true,
      "label": "POST /pets",
      "layer": 1,
      "nodeType": "HTTP",
      "position": {
        "x": 250,
        "y": 100,
      },
      "status": undefined,
      "visualGroup": "Pets",
    },
  ],
  "warnings": undefined,
}
`;
